# midi-set-class

./: .isort.cfg  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: pitch-class_sets.ipynb
midi_set_class/: midi.py  notation.py  utils.py
tests/: test_notation.py
