[metadata]
name = midi-set-class
version = 0.1b
license = MIT
url = https://github.com/JamesOwers/midi-set-class
author = James Owers
author_email = james.f.owers@gmail.com
keywords = music, machine-learning, swe
description = A python implementation of Contextual Set-Class Analysis for MIDI data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
# please keep this list sorted
install_requires =
    numpy
packages = find:
# to list a single file module called my_module.py, uncomment
# py_modules = my_module
# install entry point scripts
# scripts =

[options.extras_require]
# packages required by flexml_studio and beyond
# please keep package lists sorted
dev =
    black
    flake8
    isort
    mypy
    pre-commit
    pylint
    pytest

# [options.packages.find]
# where = src

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
pythonfiles = test_*.py

[easy_install]
index_url = https://pypi.org/simple/

[flake8]
max-line-length = 88
